--- a/006_Bookworm/Bookworm/Base.lproj/Main.storyboard
+++ b/006_Bookworm/Bookworm/Base.lproj/Main.storyboard
@@ -179,15 +179,28 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="메모를 추가해주세요." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="O9H-fh-Sqn">
+                                                <rect key="frame" x="16" y="613" width="361" height="130"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="130" id="sm6-YS-b3q"/>
+                                                </constraints>
+                                                <color key="textColor" systemColor="labelColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="2ZE-8M-gLs" firstAttribute="top" secondItem="0xm-IN-1Lx" secondAttribute="bottom" constant="3" id="69H-Zo-XaY"/>
                                             <constraint firstItem="G7m-ee-Ztd" firstAttribute="leading" secondItem="rJ7-C4-PII" secondAttribute="trailing" constant="10" id="6F9-8a-pJG"/>
+                                            <constraint firstItem="O9H-fh-Sqn" firstAttribute="leading" secondItem="aBD-z1-9RO" secondAttribute="leading" constant="16" id="GYW-9s-B2y"/>
+                                            <constraint firstAttribute="bottom" secondItem="O9H-fh-Sqn" secondAttribute="bottom" constant="16" id="L7S-Eb-RlM"/>
                                             <constraint firstItem="2ZE-8M-gLs" firstAttribute="leading" secondItem="0xm-IN-1Lx" secondAttribute="leading" id="LVP-kH-zQY"/>
                                             <constraint firstItem="0xm-IN-1Lx" firstAttribute="top" secondItem="rJ7-C4-PII" secondAttribute="bottom" constant="20" id="NsE-m0-PT1"/>
                                             <constraint firstItem="rJ7-C4-PII" firstAttribute="leading" secondItem="aBD-z1-9RO" secondAttribute="leading" constant="16" id="PxR-44-Sir"/>
                                             <constraint firstItem="G7m-ee-Ztd" firstAttribute="bottom" secondItem="rJ7-C4-PII" secondAttribute="bottom" id="c94-Ut-pDf"/>
+                                            <constraint firstAttribute="trailing" secondItem="O9H-fh-Sqn" secondAttribute="trailing" constant="16" id="e5P-gn-H1M"/>
                                             <constraint firstItem="0xm-IN-1Lx" firstAttribute="leading" secondItem="rJ7-C4-PII" secondAttribute="leading" id="egr-jb-JTb"/>
                                             <constraint firstItem="rJ7-C4-PII" firstAttribute="top" secondItem="aBD-z1-9RO" secondAttribute="top" constant="16" id="irl-n4-Xmg"/>
                                             <constraint firstItem="rJ7-C4-PII" firstAttribute="width" secondItem="aBD-z1-9RO" secondAttribute="height" multiplier="1:6" id="mYc-WJ-OFk"/>
@@ -224,6 +237,7 @@
                         <outlet property="bookPriceLabel" destination="Qmx-89-Zh5" id="8x5-KY-r6G"/>
                         <outlet property="bookSalePriceLabel" destination="Rqw-Fb-Ixp" id="HER-Vh-X45"/>
                         <outlet property="bookTitleLabel" destination="ezZ-k7-0Pt" id="eoD-WW-UHJ"/>
+                        <outlet property="memoTextView" destination="O9H-fh-Sqn" id="7jf-sP-PeO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8OZ-40-kT0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -236,6 +250,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="gDe-6P-GYV" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="CyJ-Ge-Hu2">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
@@ -253,6 +268,9 @@
         <image name="bookmark" catalog="system" width="110" height="128"/>
         <image name="bookmark.fill" catalog="system" width="110" height="128"/>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
+        <systemColor name="labelColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
